--- a/index.html
+++ b/index.html
@@ -172,10 +172,56 @@
             <h1><span>beauty</span> - realestate - Science-</h1>
             <h1>beauty - <span>Realestate</span> - Science-</h1>
         </div>
-
-
     </div>
+
+    <!-- <div class="footer">
+            <div class="footer-content">
+                <h1>Let's Create</h1>
+                <i class="ri-arrow-right-line"></i>
+            </div>
+            <div class="page-4-linee"></div>
+        </div>
+
+    </div> -->
+
+    <div class="footer">
+        <div class="footer-content">
+            <h1>Let's Create <i class="ri-arrow-right-line"></i></h1>
+        </div>
+        <div class="footer-linee"></div>
+        <div class="footer-about">
+            <div class="box1">
+
+                <h5>Social</h5>
+                <h5>Dribbble</h5>
+                <h5>Behance</h5>
+                <h5>Instagram</h5>
+                <h5>Facebook</h5>
+                <h5>Twitter</h5>
+                <h5>YouTube</h5>
+            </div>
+
+            <div class="box1">
+                <h5>Adress</h5>
+                <h5>zmarstynivska 55</h5>
+                <h5>790019</h5>
+                <h5>Ukrain</h5>
+            </div>
+
+            <div class="box1">
+                <h5>Contact us</h5>
+                <h5>Say H1!</h5>
+                <h5>obysinfo@agency</h5>
+            </div>
+
+        </div>
+        <div class="last-linee"></div>
+        <div class="copyright">
+
+            Obys Agency © 2024
+        </div>
     </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
