--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div id="main">
-        
+
         <div class="page1" data-scroll data-scroll-speed="-2.5">
             <div id="navbar">
                 <svg class="brand__svg" width="71" height="27" viewBox="0 0 71 27">
@@ -97,7 +97,7 @@
                     <h2>Experience</h2>
                 </div>
             </div>
-            
+
         </div>
 
         <div class="page2" data-scroll data-scroll-speed="-2.5"></div>
@@ -159,75 +159,78 @@
                 <h4>We Work With</h4>
             </div>
         </div>
-  
-    <!-- <div class="page-5">
 
-        <div class="elem-5">
-            <h1>Sport - <span>Technology</span> - Fashion-</h1>
-            <h1><span>Sports</span> - Technology - Fashion-</h1>
-        </div>
+        <div class="page-5">
 
-        <div class="elem-5-rev">
-            <h1><span>Science</span> - Travel - Techonology-</h1>
-            <h1>Science - Travel - <span>Technology</span>-</h1>
-        </div>
-
-        <div class="elem-5">
-            <h1>Sport - Technology - <span>Fashion-</span></h1>
-            <h1>Sport - <span>Technology</span> - Fashion-</h1>
-        </div>
-
-        <div class="elem-5-rev">
-            <h1><span>beauty</span> - realestate - Science-</h1>
-            <h1>beauty - <span>Realestate</span> - Science-</h1>
-        </div>
-
-    </div> -->
-
-    <!-- <div class="footer">
-
-        <div class="footer-content">
-            <h1>Let's Create <i class="ri-arrow-right-line"></i></h1>
-        </div>
-
-        <div class="footer-linee"></div>
-
-        <div class="footer-about">
-            <div class="box1">
-
-                <h5>Social</h5>
-                <h5>Dribbble</h5>
-                <h5>Behance</h5>
-                <h5>Instagram</h5>
-                <h5>Facebook</h5>
-                <h5>Twitter</h5>
-                <h5>YouTube</h5>
+            <div class="elem-5">
+                <h1>Sport - <span>Technology</span> - Fashion-</h1>
+                <h1><span>Sports</span> - Technology - Fashion-</h1>
             </div>
 
-            <div class="box1">
-                <h5>Adress</h5>
-                <h5>zmarstynivska 55</h5>
-                <h5>790019</h5>
-                <h5>Ukrain</h5>
+            <div class="elem-5-rev">
+                <h1><span>Science</span> - Travel - Techonology-</h1>
+                <h1>Science - Travel - <span>Technology</span>-</h1>
             </div>
 
-            <div class="box1">
-                <h5>Contact us</h5>
-                <h5>Say H1!</h5>
-                <h5>obysinfo@agency</h5>
+            <div class="elem-5">
+                <h1>Sport - Technology - <span>Fashion-</span></h1>
+                <h1>Sport - <span>Technology</span> - Fashion-</h1>
+            </div>
+
+            <div class="elem-5-rev">
+                <h1><span>beauty</span> - realestate - Science-</h1>
+                <h1>beauty - <span>Realestate</span> - Science-</h1>
             </div>
 
         </div>
 
-        <div class="last-linee"></div>
+        <div class="footer">
 
-        <div class="copyright">
-            Obys Agency © 2024
+            <div class="footer-content">
+                <h1>Let's Create <i class="ri-arrow-right-line"></i></h1>
+            </div>
+
+            <div class="footer-linee"></div>
+
+            <div class="footer-about">
+                <div class="box1">
+
+                    <h5>Social</h5>
+                    <h5>Dribbble</h5>
+                    <h5>Behance</h5>
+                    <h5>Instagram</h5>
+                    <h5>Facebook</h5>
+                    <h5>Twitter</h5>
+                    <h5>YouTube</h5>
+                </div>
+
+                <div class="box1">
+                    <h5>Adress</h5>
+                    <h5>zmarstynivska 55</h5>
+                    <h5>790019</h5>
+                    <h5>Ukrain</h5>
+                </div>
+
+                <div class="box1">
+                    <h5>Contact us</h5>
+                    <h5>Say H1!</h5>
+                    <h5>obysinfo@agency</h5>
+                </div>
+
+            </div>
+
+            <div class="last-linee"></div>
+
+            <div class="copyright">
+                Obys Agency © 2024
+            </div>
+
         </div>
 
-    </div> -->
+        <!-- <div class="extra">
+        </div> -->
 
-</div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
