--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <div class="hero-line" id="hero4">
                     <h2>Experience</h2>
                 </div>
+                <img  id="Flag src="assets/Flag.jpg" alt="">
             </div>
 
         </div>
