--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Obys Agency</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=League+Spartan:wght@100..900&display=swap"
         rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css">
     <link rel="stylesheet" href="style.css">
@@ -41,7 +44,7 @@
         <div id="mousefollower"></div>
         <div class="page1" data-scroll data-scroll-speed="-2.5">
             <div id="navbar">
-                <svg class="brand__svg" width="71" height="27" viewBox="0 0 71 27">
+                <svg id="svg" class="brand__svg" width="71" height="27" viewBox="0 0 71 27">
                     <path
                         d="M40.7622 24.5917C40.7622 23.6724 41.4511 22.9829 42.3697 22.9829C43.2883 22.9829 43.9773 23.6724 43.9773 24.5917C43.9773 25.511 43.2883 26.2005 42.3697 26.2005C41.566 26.2005 40.7622 25.3961 40.7622 24.5917Z"
                         fill="currentColor"></path>
@@ -95,7 +98,7 @@
                 <div class="hero-line" id="hero4">
                     <h2>Experience</h2>
                 </div>
-                <img  id="Flag src="assets/Flag.jpg" alt="">
+                <img id="Flag" src="./assets/Flag.jpg" alt="">
             </div>
 
         </div>
@@ -210,9 +213,9 @@
                     <h5>Ukrain</h5>
                 </div>
 
-                <div class="box1">
+                <div id="sayHi" class="box1">
                     <h5>Contact us</h5>
-                    <h5>Say H1!</h5>
+                    <h5 id="sayy">Say H1!</h5>
                     <h5>obysinfo@agency</h5>
                 </div>
 
