--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="loader">
-        <div class="line">
+        <div class="line line-animation">
             <div id="line1-part1">
                 <h5>00</h5>
                 <h6>- 100</h6>
